<resources>
    <string name="app_name">DoorMatt</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="door_mat">Door Mat</string>
    <string name="admin">Admin</string>
    <string name="blank_date">../../....</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="new_resident">New Resident</string>
    <string name="guard_name">Guard Name</string>
    <string name="guard_password">Guard Password</string>
    <string name="new_guard">New Guard</string>
    <string name="guard_email">Guard Email</string>
    <string name="title_activity_resident">ResidentActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_test">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_admin_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emergency_contact_number">Emergency Contact Number</string>
    <string name="emergency_contact_person">Emergency Contact Person</string>
    <string name="room_number">Room Number</string>
    <string name="save">Save</string>
    <string name="create_id_template">Create ID Template</string>
    <string name="resident_id">Resident ID</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login With Google</string>
    <string name="or">- OR -</string>
    <string name="sign_up_instead">Sign up instead</string>
    <string name="doormat">DoorMat</string>
    <string name="login_instead">Login Instead</string>
    <string name="add_guard">Add Guard</string>
    <string name="register">Register</string>
    <string name="add_new_resident">Add new resident.</string>
    <string name="search">Search</string>
    <string name="full_name">Full Name</string>
    <string name="edit_resident">Edit Resident</string>
    <string name="update">Update</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="room">Room</string>
    <string name="status">Status:</string>
    <string name="name">Name:</string>
    <string name="date">Date</string>
    <string name="guard_logs">Guard Logs</string>
    <string name="new_visitor">New Visitor</string>

</resources>