<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:background="@drawable/gradient_white_grey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Resident"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/ColorSecondary"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginBottom="8dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_resident_first_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textCapSentences"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorGrey"
                android:background="@drawable/rounded_corners_text_input"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/edit_resident_last_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textCapSentences"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorGrey"
                android:background="@drawable/rounded_corners_text_input"
                android:padding="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/edit_resident_date_of_birth_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/grey"
                    android:background="@drawable/rounded_corners_text_input"
                    android:padding="8dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/edit_resident_date_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_baseline_calendar_today_24"
                    android:paddingTop="8dp"
                    android:backgroundTint="@color/ColorPrimary"
                    android:layout_weight="4"/>

            </LinearLayout>

            <EditText
                android:id="@+id/edit_resident_room_number_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/room_number"
                android:inputType="textCapSentences"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorGrey"
                android:background="@drawable/rounded_corners_text_input"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/edit_resident_emergency_contact_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emergency_contact_person"
                android:inputType="textCapSentences"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorGrey"
                android:background="@drawable/rounded_corners_text_input"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/edit_resident_emergency_contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emergency_contact_number"
                android:inputType="textCapSentences"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorGrey"
                android:background="@drawable/rounded_corners_text_input"
                android:padding="8dp"/>

            <Button
                android:id="@+id/edit_resident_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_baseline_check_24"
                android:drawableTint="@color/white"
                android:textColor="@color/white"
                android:background="@drawable/rounded_corners_button"
                android:padding="8dp"
                android:layout_gravity="end"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>