<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/door_mat"
        android:textAllCaps="true"
        android:textColor="@color/ColorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/new_guard"
        android:textColor="@color/ColorSecondary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:startIconDrawable="@drawable/fui_ic_mail_white_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/guardEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/guardNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/guardPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/guardConfirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveGuardButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/new_guard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />


</androidx.constraintlayout.widget.ConstraintLayout>

<!--
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@drawable/gradient_white_grey"
tools:context=".guard.GuardMainActivity">


<TextView
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/door_mat"
android:textSize="32sp"
android:textStyle="bold"
android:textColor="@color/ColorPrimary"
android:textAllCaps="true"
android:layout_marginBottom="4dp"
android:fontFamily="sans-serif-black"/>

<TextView
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/new_guard"
android:textSize="22sp"
android:textStyle="bold"
android:textColor="@color/ColorSecondary"
android:fontFamily="sans-serif-condensed"
android:layout_marginBottom="8dp"/>

<EditText
android:id="@+id/guardEmailEditText"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/guard_email"
android:inputType="textEmailAddress"
android:layout_marginBottom="8dp"
android:textColor="@color/grey"
android:background="@drawable/rounded_corners_text_input"
android:padding="8dp"
android:autofillHints="" />

<EditText
android:id="@+id/guardNameEditText"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/guard_name"
android:inputType="textCapSentences"
android:layout_marginBottom="8dp"
android:textColor="@color/grey"
android:background="@drawable/rounded_corners_text_input"
android:padding="8dp"
android:autofillHints="" />

<EditText
android:id="@+id/guardPasswordEditText"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/password"
android:inputType="textPassword"
android:layout_marginBottom="8dp"
android:textColor="@color/grey"
android:background="@drawable/rounded_corners_text_input"
android:padding="8dp"
android:autofillHints="" />

<EditText
android:id="@+id/guardConfirmPasswordEditText"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/confirm_password"
android:inputType="textPassword"
android:layout_marginBottom="8dp"
android:textColor="@color/grey"
android:background="@drawable/rounded_corners_text_input"
android:padding="8dp"
android:autofillHints="" />


<Button
android:id="@+id/saveGuardButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="Save"
android:textAllCaps="true"
android:textStyle="bold"
android:drawableStart="@drawable/ic_baseline_check_24"
android:drawableTint="@color/white"
android:textColor="@color/white"
android:background="@drawable/rounded_corners_button"
android:padding="8dp"
android:layout_gravity="right"/>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>-->
